--- a/src/css/root/index.css
+++ b/src/css/root/index.css
@@ -58,6 +58,12 @@ html, body, #root {
   padding: 0;
 }
 
+button,
+.cgp-cell,
+.cgp-mobile-row {
+  -webkit-tap-highlight-color: transparent;
+}
+
 
 /* @media (prefers-color-scheme: light) {
   :root {
